[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycps"
version = "0.1.0"
description = "Python utilities for CPS (Common Package Specification)"
authors = [{ name = "John Parent" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
